[package]
name = "alda"
description = "Small utility to deal with an ocean of torrents"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Andriy Kushnir (Orhideous) <me@orhideous.name>"]

[dependencies]
clap = "3.0.0-beta.5"
walkdir = "2"
log = "0.4"
simple_logger = "^1.13.0"
serde_bencode = "^0.2.3"
serde = "^1.0.0"
serde_derive = "^1.0.0"
serde_bytes = "0.11.5"
thiserror = "1.0.30"
anyhow = "1.0"
